--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
+        env: CI=false
         run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
