--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,7 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -16,6 +16,23 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: build
+          path: build
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: build
+          path: build        
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -25,3 +42,12 @@ jobs:
           projectId: blazing-the-nets
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+  remove:
+    name: Remove
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Remove run artifacts
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          name: build
