--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -4,7 +4,7 @@
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -13,6 +13,23 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: build
+          path: build
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: build
+          path: build      
       - name: Deploy PR to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -21,3 +38,12 @@ jobs:
           projectId: blazing-the-nets
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+  remove:
+    name: Remove
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Remove run artifacts
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          name: build
