--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,6 +3,13 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+env:
+  REACT_APP_API_FB_KEY: ${{ secrets.REACT_APP_API_FB_KEY }}
+  REACT_APP_FB_AUTH_DOMAIN: ${{ secrets.REACT_APP_FB_AUTH_DOMAIN }}
+  REACT_APP_FB_DATABASE_URL: ${{ secrets.REACT_APP_FB_DATABASE_URL }}
+  REACT_APP_FB_PROJECT_ID: ${{ secrets.FB_PROJECT_ID }}
+  REACT_APP_FB_STORAGE_BUCKET: ${{ secrets.FB_STORAGE_BUCKET }}
+  REACT_APP_FB_MESSAGING_SENDER_ID: ${{ secrets.FB_MESSAGING_SENDER_ID }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,13 +38,15 @@ jobs:
           name: build
           path: build      
       - name: Deploy PR to Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v0
+        uses: w9jds/firebase-action@master
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BLAZING_THE_NETS }}'
           projectId: blazing-the-nets
+          args: deploy --only hosting
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BLAZING_THE_NETS }}
   remove:
     name: Remove
     needs: deploy
