--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "d3-shape": "^2.1.0",
     "express": "^4.17.1",
     "firebase": "^8.3.1",
-    "firebase-tools": "^9.6.1",
+    "firebase-tools": "^9.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,9 +27,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "NODE_ENV=development react-scripts start",
-    "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "dev": "NODE_ENV=development env-cmd -f .env.development react-scripts start",
+    "start": "NODE_ENV=development env-cmd -f .env.development react-scripts start",
+    "build": "CI=false env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
