--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "dev": "NODE_ENV=development env-cmd -f .env.development react-scripts start",
     "start": "NODE_ENV=development env-cmd -f .env.development react-scripts start",
-    "build": "CI=false env-cmd -f .env.production react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
