--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blazing-the-nets",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blazing-the-nets.web.app/",
+  "homepage": "https://blazingthenets.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
