--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@vx/legend": "^0.0.199",
     "axios": "^0.21.1",
     "d3": "^6.6.0",
     "d3-delaunay": "^5.3.0",
@@ -23,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-animated-burgers": "^1.2.8",
+    "react-d3-legends": "^0.0.27",
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
