--- a/etl/package.json
+++ b/etl/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.21.1",
-    "nba": "latest",
-    "nba-client-template": "5.0.0",
+    "node-fetch": "2.6.1",
     "promise": "^8.1.0",
     "request": "^2.88.2",
     "victory": "^35.4.12"
