--- a/etl/package.json
+++ b/etl/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.21.1",
-    "node-fetch": "2.6.1",
+    "node-fetch": "^2.6.1",
     "promise": "^8.1.0",
     "request": "^2.88.2",
     "victory": "^35.4.12"
